--- a/dsm-refs.bib
+++ b/dsm-refs.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Tue, 18 Sep 2012.
+%% Created using Papers on Thu, 04 Oct 2012.
 %% http://mekentosj.com/papers/
 
 @article{Baddeley:2000to,
@@ -11,17 +11,17 @@ number = {3},
 pages = {283--322},
 rating = {0},
 date-added = {2012-05-29T18:55:50GMT+00:00},
-date-modified = {2012-06-05T03:43:24GMT+00:00},
-url = {http://onlinelibrary.wiley.com/doi/10.1111/1467-842X.00128/abstract},
+date-modified = {2012-10-04T17:41:09GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2000/Baddeley--2000.pdf},
 file = {{Baddeley--2000.pdf:/Users/dill/Dropbox/Papers2/2000/Baddeley--2000.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/84517B79-4C59-42FF-A6E3-AD735D646120}}
 }
 
-@techreport{Bravington:2010vw,
+@article{Bravington:2010vw,
 author = {Bravington, M.V. and Hedley, Sharon L},
-title = {{Antarctic minke whale abundance from the SPLINTR model: some'reference'dataset results and'preferred'estimates from the second and third circumpolar IDCR/SOWER surveys}},
+title = {Antarctic minke whale abundance from the SPLINTR model: some reference dataset results and preferred estimates from the second and third circumpolar {IDCR/SOWER} surveys},
 year = {2010},
+journal = {Paper SC/62/IA12 presented to the IWC Scientific Committee},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
@@ -34,13 +34,14 @@ uri = {\url{papers2://publication/uuid/C6C86554-53D5-4A16-BE5A-B894AFD08CC5}}
 
 @techreport{Bravington:2009vo,
 author = {Bravington, M.V. and Hedley, Sharon L},
-title = {{Antarctic minke whale abundance estimates from the second and third circumpolar IDCR/SOWER surveys using the SPLINTR model}},
+title = {Antarctic minke whale abundance estimates from the second and third circumpolar IDCR/SOWER surveys using the SPLINTR model},
 year = {2009},
+number = {SC/61/IA14},
+institution = {IWC Scientific Committee},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
 date-modified = {2012-09-18T22:51:00GMT+00:00},
-url = {http://www.iwcoffice.org/_documents/sci_com/sc61docs/SC-61-IA14.pdf},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf},
 file = {{Bravington--2009.pdf:/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/323A731F-7B00-4AAA-9BE4-96F18CCC428D}}
@@ -73,7 +74,7 @@ uri = {\url{papers2://publication/uuid/628737E2-D98A-42CD-8546-93F1C833D11F}}
 @article{Candy:2004tb,
 author = {Candy, SG},
 title = {{Modelling catch and effort data using generalised linear models, the Tweedie distribution, random vessel effects and random stratum-by-year effects}},
-journal = {Ccamlr Science},
+journal = {{CCAMLR} Science},
 year = {2004},
 volume = {11},
 pages = {59--80},
@@ -81,11 +82,25 @@ read = {Yes},
 rating = {0},
 date-added = {2012-07-09T20:12:20GMT+00:00},
 date-modified = {2012-09-18T22:49:24GMT+00:00},
-url = {http://www.ccamlr.org/ccamlr_science/Vol-11-2004/04candy.pdf},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Candy-CCAMLR_Science-2004.pdf},
 file = {{Candy-CCAMLR_Science-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Candy-CCAMLR_Science-2004.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/C3059294-39F2-44B8-84DE-BC66DA2C3835}}
 }
+
+@article{Cleveland:1979vd,
+author = {Cleveland, W S},
+title = {{Robust locally weighted regression and smoothing scatterplots}},
+journal = {Journal of the American Statistical Association},
+year = {1979},
+pages = {829--836},
+rating = {0},
+date-added = {2012-06-05T03:36:13GMT+00:00},
+date-modified = {2012-10-04T19:41:12GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/1979/Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf},
+file = {{Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf:/Users/dill/Dropbox/Papers2/1979/Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/A6409608-C46C-440B-9851-8CF07599E25F}}
+}
+
 
 @book{cox1980point,
 author = {Cox, David R and Isham, V.},
@@ -180,7 +195,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:20:26GMT+00:00},
-date-modified = {2012-09-18T23:03:30GMT+00:00},
+date-modified = {2012-10-02T21:09:09GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf},
 file = {{Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1198/1085711043578}}
@@ -249,7 +264,7 @@ pages = {1229--1243},
 read = {Yes},
 rating = {0},
 date-added = {2010-07-23T21:49:27GMT+00:00},
-date-modified = {2012-06-19T15:33:11GMT+00:00},
+date-modified = {2012-09-28T17:42:51GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2007/Marques-The_Auk-2007.pdf},
 file = {{Marques-The_Auk-2007.pdf:/Users/dill/Dropbox/Papers2/2007/Marques-The_Auk-2007.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/BA1139E9-4364-46DD-9DE2-1773FF9679E6}}
@@ -297,6 +312,7 @@ a quasi-designed experiment accounting for imperfect detection, local surface fe
 year = {2011},
 number = {2011-1},
 month = sep,
+institution = {CREEM Technical Report},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-19T16:03:03GMT+00:00},
@@ -315,7 +331,7 @@ pages = {307--319},
 read = {Yes},
 rating = {0},
 date-added = {2009-11-30T12:47:43GMT+00:00},
-date-modified = {2012-09-18T22:52:22GMT+00:00},
+date-modified = {2012-10-02T22:02:21GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2002/Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf},
 file = {{Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf:/Users/dill/Dropbox/Papers2/2002/Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/0AB944B6-72CC-4119-93DB-EB36FEB64C45}}
@@ -351,7 +367,6 @@ rating = {0},
 date-added = {2012-05-29T19:06:01GMT+00:00},
 date-modified = {2012-09-18T23:04:50GMT+00:00},
 abstract = {Originally published in 1982, this reprint of the second edition of The Estimation of Animal Abundance and Related Parameters has been described as the "bible" of the field.},
-url = {http://books.google.com/books?id=bnGaPQAACAAJ&dq=seber&cd=10&source=gbs_api},
 uri = {\url{papers2://publication/uuid/8BEB690D-5749-411B-8CAC-901EB9E6606C}}
 }
 
@@ -387,7 +402,7 @@ doi = {10.1111/j.1365-2664.2009.01737.x},
 read = {Yes},
 rating = {0},
 date-added = {2010-07-14T20:18:23GMT+00:00},
-date-modified = {2012-09-18T22:52:48GMT+00:00},
+date-modified = {2012-10-04T15:13:21GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf},
 file = {{Thomas-Journal_of_Applied_Ecology-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1111/j.1365-2664.2009.01737.x}}
@@ -405,8 +420,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:49:42GMT+00:00},
 date-modified = {2012-09-18T23:05:13GMT+00:00},
-abstract = {Praise for the Second Edition "This book has never had a competitor. It is the only book that takes a broad approach to sampling . . . any good personal statistics library should include a copy of this book." --Technometrics "Well-written . . . an excellent book on an important subject. Highly recommended." --Choice "An ideal reference for scientific researchers and other professionals who use sampling." --Zentralblatt Math Features new developments in the field combined with all aspects of obtaining, interpreting, and using sample data Sampling provides an up-to-date treatment of both classical and modern sampling design and estimation methods, along with sampling methods for rare, clustered, and hard-to-detect populations. This Third Edition retains the general organization of the two previous editions, but incorporates extensive new material--sections, exercises, and examples--throughout. Inside, readers will find all-new approaches to explain the various techniques in the book; new figures to assist in better visualizing and comprehending underlying concepts such as the different sampling strategies; computing notes for sample selection, calculation of estimates, and simulations; and more. Organized into six sections, the book covers basic sampling, from simple random to unequal probability sampling; the use of auxiliary data with ratio and regression estimation; sufficient data, model, and design in practical sampling; useful designs such as stratified, cluster and systematic, multistage, double and network sampling; detectability methods for elusive populations; spatial sampling; and adaptive sampling designs. Featuring a broad range of topics, Sampling, Third Edition serves as a valuable reference on useful sampling and estimation methods for researchers in various fields of study, including biostatistics, ecology, and the health sciences. The book is also ideal for courses on statistical sampling at the upper-undergraduate and graduate levels.},
-url = {http://books.google.com/books?id=qukULxJ--QAC&printsec=frontcover&dq=intitle:sampling+inauthor:thompson&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/F844F284-F8FD-45EB-B547-941C0530D788}}
 }
 
@@ -421,7 +434,7 @@ pages = {209--217},
 read = {Yes},
 rating = {0},
 date-added = {2009-11-30T12:48:08GMT+00:00},
-date-modified = {2012-06-03T18:09:31GMT+00:00},
+date-modified = {2012-10-02T21:03:42GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2007/Wang-Biometrics-2007.pdf},
 file = {{Wang-Biometrics-2007.pdf:/Users/dill/Dropbox/Papers2/2007/Wang-Biometrics-2007.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/4A01252F-01AE-43F8-973D-A4C579C245D2}}
@@ -440,7 +453,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2011-03-16T13:12:31GMT+00:00},
-date-modified = {2012-09-18T23:05:24GMT+00:00},
+date-modified = {2012-10-02T21:09:36GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf},
 file = {{Williams-Conservation_Biology-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1111/j.1523-1739.2011.01656.x}}
@@ -474,7 +487,7 @@ pages = {931--955},
 read = {Yes},
 rating = {0},
 date-added = {2010-03-23T20:11:51GMT+00:00},
-date-modified = {2012-09-18T22:52:22GMT+00:00},
+date-modified = {2012-10-02T20:59:54GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf},
 file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/8326BCA7-727A-494B-8BAD-11AC5255B783}}
@@ -488,7 +501,7 @@ year = {2006},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T17:55:29GMT+00:00},
-date-modified = {2012-08-20T13:42:32GMT+00:00},
+date-modified = {2012-10-02T21:06:31GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Wood--2006.pdf},
 file = {{Wood--2006.pdf:/Users/dill/Dropbox/Papers2/2006/Wood--2006.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/0F51C4D6-4E84-4A13-933F-42596D681835}}
@@ -505,7 +518,7 @@ pages = {95--114},
 read = {Yes},
 rating = {0},
 date-added = {2009-11-30T12:47:43GMT+00:00},
-date-modified = {2012-09-18T22:52:22GMT+00:00},
+date-modified = {2012-10-02T21:27:28GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2003/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf},
 file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf:/Users/dill/Dropbox/Papers2/2003/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/34D20AF3-652A-4D99-B96D-01D4641008B2}}
